Trial-1.html completed

--- a/css-trials/trial-1.html
+++ b/css-trials/trial-1.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <style> 
+        <style>
+            /* <font-family="sans-serif">
+            </font> */
+            body {
+                font-family: sans-serif;
+            }
         </style>
     </head>
 
     <body>
         <h1> Hello World!</h1>
-
     </body>
 
 </html>
