Trial-2.html completed

--- a/css-trials/trial-2.html
+++ b/css-trials/trial-2.html
@@ -4,13 +4,22 @@
   <head>
     <style>
         /* div {margin: 10px} */
-        div {height: 240px}
+        /* div {height: 240px}
         div {width: 350px}
-        div {background-color: #ff0000}
+        div {background-color: #ff0000} */
+        div {height: 240px;
+        width: 350px;
+        background-color: #ff0000;}
     </style>
   </head>
 
   <body>
+      <div>
+
+      </div>
+      <!-- div {height: 240px;
+        width: 350px;
+        background-color: #ff0000;} -->
   </body>
 
 </html>
