Trial-2.html completed for reals

--- a/css-trials/trial-2.html
+++ b/css-trials/trial-2.html
@@ -3,13 +3,12 @@
 
   <head>
     <style>
-        /* div {margin: 10px} */
-        /* div {height: 240px}
-        div {width: 350px}
-        div {background-color: #ff0000} */
-        div {height: 240px;
+        div {
+        height: 240px;
         width: 350px;
         background-color: #ff0000;}
+        
+        body {margin:0;}
     </style>
   </head>
 
@@ -17,9 +16,7 @@
       <div>
 
       </div>
-      <!-- div {height: 240px;
-        width: 350px;
-        background-color: #ff0000;} -->
+
   </body>
 
 </html>
