Trial-3.html completed

--- a/css-trials/trial-3.html
+++ b/css-trials/trial-3.html
@@ -3,20 +3,34 @@
 
   <head>
     <style>
-        div {
-        height: 240px;
-        width: 350px;
+        div.blackbox {
+        height: 100px;
+        width: 500px;
+        background-color: #000000;}
+
+        div.redbox {
+        height: 100px;
+        width: 500px;
         background-color: #ff0000;}
         
+        div.yellowbox {
+        height: 100px;
+        width: 500px;
+        background-color: #d1b61c;}
+
         body {margin:0;}
     </style>
   </head>
 
   <body>
-      <div>
-
+      <div class="blackbox">
       </div>
 
+      <div class="redbox">
+      </div>
+      
+      <div class="yellowbox">
+      </div>
   </body>
 
 </html>
